# irve

./: '  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  Makefile  README.md  cloc.sh  example_config.cmake  example_linker_script.ld  irve  irvegdb  irvegdb_gdb_commands  irvegdb_mmode.sh  irvegdb_smode.sh  irvegdb_smode_gdb_commands  macros.cmake
legacy_irve_rust/: Cargo.toml  LICENSE
legacy_irve_rust/lib/: lib.rs
legacy_irve_rust/src/: irve-cli.rs
lib/: CMakeLists.txt  CSR.cpp  CSR.h  about.rs  aclint.cpp  aclint.h  cmake_config.h.in  common.cpp  common.h  config.h  cpu_state.cpp  cpu_state.h  csr.cpp  csr.h  csr_handler.rs  decode.cpp  decode.h  decode.rs  emulator.cpp  emulator.h  execute.cpp  execute.h  fetch.rs  fuzzish.h  gdbserver.cpp  gdbserver.h  instance.rs  instruction_handler.rs  io.rs  irve_public_api.cpp  irve_public_api.cpp.in  lib.rs  loader.cpp  loader.h  loaders.cpp  logging.cpp  logging.h  logging.rs  memory.cpp  memory.h  (+17 more)
lib/c/: CMakeLists.txt  cinit.S  cleanup.c  vector_table.S
lib/cxx/: CMakeLists.txt  workaround.cpp
lib/disassemble/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  irve_disassemble.h
lib/disassemble/include/: irve_disassemble.h
lib/disassemble/lib/: disassemble.rs  ffi.rs  lib.rs
lib/pmmap/: memory_handler.rs  ram.rs
lib/smode_newlib_syscalls/: CMakeLists.txt  smode_newlib_syscalls.c
lib/standard_extensions/: i.rs
rvsw/: CMakeLists.txt  compiled  irve.dtb  irve.dts  irve_mmode.h  irve_mmode.ld  irve_mmode_inception.ld  irve_mmode_newlib.c  irve_rvsw_config.cmake  irve_smode.ld  irve_smode_inception.ld  rvsw_toolchain.cmake
rvsw/legacy/: CMakeLists.txt
rvsw/legacy/compiled/: NOTE_WHY_NOT_ALL_ARE_SIMLINKS.txt  exception_bringup.hex  hello_newlib.hex  privilege_levels.hex  rv32esim_c.hex  rv32im_sanity.hex  user_and_back_in_time_for_dinner.hex
rvsw/legacy/src/rust/: CMakeLists.txt
rvsw/legacy_handassembled/: ls_test.vhex32  test2.txt
rvsw/linux_configs/: ATTEMPT1_IT_FRICKING_WORKS_YAY  attempt0  mmode_attempt0_semihosting  mmode_attempt0_semihosting_more_agressive_debugging  mmode_attempt0_semihosting_super_agressive_debug_and_testing_but_no_ubsan  smode_debugging
sbi/: CMakeLists.txt  asm_c_interface.h  exception_entry.s  gp_tp_preserve_restore.s  irvesbi.ld  jump2linux.s  jump2smode.s  main.c
sbi/ogsbi/: CMakeLists.txt  asm_c_interface.h  common.h  dtb.S  exception_entry.s  gp_tp_preserve_restore.s  interrupt_entry.S  interrupts.c  jump2linux.S  jump2linux.s  legacy.c  main.c  other_exceptions.c  sbi.c  timers.c  virtual.S
src/: CMakeLists.txt  CSR.cpp  CSR.h  Memory.cpp  Memory.h  Memory.hpp  Reg.h  cmake_config.h  cmake_config.h.in  common.cpp  common.h  cpu_state.cpp  cpu_state.h  csrs.cpp  csrs.h  decode.cpp  decode.h  emulator.cpp  emulator.h  execute.cpp  execute.h  loader.cpp  loader.h  logging.cpp  logging.h  main.cpp  maingdb.cpp  memory.cpp  memory.h  reg.h  reg_file.cpp  reg_file.h  rvexception.cpp  rvexception.h  rvsw_asm.h.in  xrve-cli.rs
src/irver/: CMakeLists.txt  Cargo.toml  build.rs
src/irvers/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
src/irvers/lib/: ffi.rs  lib.rs
src/irvers/src/: irve.rs  main.rs
src/irvers/src/irve/: ffi.rs
src/single_file/: CMakeLists.txt
src/single_file/asm/: CMakeLists.txt  atomics.S  privilege_levels.S  privilege_levels.s  rv32esim.S  user_and_back_in_time_for_dinner.S
src/single_file/asm/jzjcoresoftware/: CMakeLists.txt  adding2.S  (+23 more)
src/single_file/c/: CMakeLists.txt  hello_exceptions.c  hello_world.c  irve_csr_bringup.c  irve_debugging_puts_weirdness.c  irve_exception_bringup.c  irve_stress_test.c  nommulinux.c  nouveau_stress_test.c  poll_timer.c  poll_timer_interrupt_mmode.c  poll_timer_interrupt_smode.c  poll_timer_mmode.c  rv32esim.c  rv32im_sanity.c  software_floating_point_fun.c  timer_interrupt_mmode.c  timer_interrupt_smode.c
src/single_file/cxx/: CMakeLists.txt  cxx_experiments.cpp  hello_cxx.cpp  irve_interrupt_bringup.cpp  irve_vm_bringup.cpp  morevm.cpp  uart_read_interrupt_test.cpp  uart_read_poll_csr_interrupt_pending_test.cpp  uart_read_test.cpp  uart_write_interrupt_test.cpp  uart_write_test.cpp
testfiles/: CMakeLists.txt  branch_test.txt  jzj_testing.txt  rv32esim.txt  test.txt
testfiles/compiled/: csr_bringup.hex  debugging_puts_weirdness.hex  hello_exceptions.hex  hello_newlib_previously_working_manual_compile.txt  hello_world.hex  rv32esim.hex  rv32im_sanity.txt  software_floating_point_fun.hex  stress_test.hex  stress_test_previously_partially_working_manual_compile.txt  test_debug_addr.txt
testfiles/precompiled/: hello_world_c.txt  hello_world_c_O3.txt  rv32esim.txt  rv32esim_c.txt  software_floating_point_fun.txt  software_floating_point_fun_O3.txt  software_floating_point_fun_O3_lto.txt  stress_test.txt  using_newlib.txt
testfiles/source/: rv32esim.s
testfiles/src/: irve.ld  irvesmode.ld
testfiles/src/assembly/: privilege_levels.s  rv32esim.s  user_and_back_in_time_for_dinner.s
testfiles/src/c/: crt0.s  crt0_no_newlib.s  hello_world.c  irve.h  irve_newlib.c  irve_smode_newlib.c  rv32esim_c.c  rv32im_sanity.c  using_newlib.c  vector_table.s  vectors.s
testfiles/src/rust/: Cargo.toml
tests/: CMakeLists.txt  test_list.cmake  test_list.txt
tests/integration/: CMakeLists.txt  basics.cpp  init.cpp  integration_tester.cpp  integration_tester.cpp.in  integration_tests.h.in  jzjcoresoftware.cpp
tests/riscv_arch_test/: CMakeLists.txt  config.ini  riscv_arch_tester.cpp
tests/riscv_arch_test/irve/: irve_isa.yaml  irve_platform.yaml  riscof_irve.py  riscv_arch_tester
tests/riscv_arch_test/spike/: riscof_spike.py  spike_isa.yaml  spike_platform.yaml
tests/rvsw/: CMakeLists.txt  elf.cpp  jzjcoresoftware.cpp  rv32esim.cpp  rvsw_verifier.cpp.in  standalone.cpp
tests/testfiles/: CMakeLists.txt  jzjcoresoftware.cpp  rv32esim.cpp  testfiles_tester.cpp.in  testfiles_verifier.cpp.in
tests/unit/: CMakeLists.txt  CSR.cpp  common.cpp  cpu_state.cpp  decode.cpp  execute.cpp  logging.cpp  memory.cpp  reg_file.cpp  uart.cpp  unit_tester.cpp  unit_tester.cpp.in  unit_tests.h.in
(+144 files in other folders)
