[package]
name = "xrve"
version = "0.1.0"
description = "The eXtensible RISC-V Emulator"
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/xrve"
license = "MIT"
#license-file = "LICENSE"
edition = "2021"
#keywords = []
#categories = []
#default-run = ""
#documentation = ""

[workspace]

members = [
    "xrve_proc_macro",
]

[dependencies]
xrve_proc_macro = { path = "xrve_proc_macro" }

[features]
default = []
nightly-features = ["nightly-features-benches"]
nightly-features-benches = []

[lib]
name = "xrve"
path = "lib/lib.rs"

[[bin]]
name = "xrve-cli"
path = "src/xrve-cli.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
