[package]
name = "irve"
version = "0.1.0"
description = "The Inextensible RISC-V Emulator"
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/irve"
license = "MIT"
#license-file = "LICENSE"
edition = "2021"
#keywords = []
#categories = []
#default-run = ""
#documentation = ""

[workspace]

#members = [
#    "xrve_proc_macro",
#]

#[dependencies]
#xrve_proc_macro = { path = "xrve_proc_macro" }

[features]
#default = ["logging"]
nightly-features = ["nightly-features-benches"]
nightly-features-benches = []
#logging = []

[lib]
name = "irve"
path = "lib/lib.rs"

[[bin]]
name = "irve-cli"
path = "src/irve-cli.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
